# arc-cpp-sosimians

./: CMakeLists.txt  config.bat  config.sh  makefile  raise.bat  raise.sh
app/: main.cpp
include/: sosimians.h
source/: sosimians.cpp
test/: main.cpp
